# x25519-xchacha20poly1305

./: .gitignore  Cargo.toml  README.md
coverage/: index.html
coverage/x25519-xchacha20poly1305/src/: ephemeral.rs.html  index.html  lib.rs.html
main/: crates.js  search-index.js  settings.html  source-files.js
main/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
main/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/x25519_xchacha20poly1305/: trait.Secret.js
main/src/x25519_xchacha20poly1305/: ephemeral.rs.html  lib.rs.html
main/src/xtask/: main.rs.html
main/x25519_xchacha20poly1305/: all.html  index.html  sidebar-items.js  struct.PublicKeyEncryption.html  trait.Secret.html
main/x25519_xchacha20poly1305/ephemeral/: index.html  sidebar-items.js  trait.PublicKeyExt.html  trait.StaticSecretExt.html
main/xtask/: fn.main.html
x25519-xchacha20poly1305/: Cargo.toml
x25519-xchacha20poly1305/src/: ephemeral.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
